--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t ritbiksis/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run ritbiksis/docker-react npm run test -- --coverage
+  - docker run ritbiksis/docker-react yarn test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
