--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,4 @@ services:
     volumes:
       - /app/node_modules
       - .:/app
-    command: ["npm", "run", "test"]
-    
+    command: ["yarn", "test"]
