Added ngnix port an fix dockerfile

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,9 +2,9 @@ FROM node:11.10-alpine
 
 WORKDIR /app
 
-COPY package.json .
+COPY package*.json ./
 RUN yarn install
 
-COPY . .
+COPY ./ ./
 
 CMD ["yarn","start"]
